--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env.remote
 
 # vercel
 .vercel
@@ -50,3 +51,4 @@ yarn-error.log*
 node-compile-cache/
 
 docs/
+credentials.txt
